# CodeEval

./: .gitignore  README.md
CSol/: CMakeLists.txt  cash_register  cash_register.cpp  codeEvalHelper.h  data_recovery.cpp  detecting_cycles.cpp  double_squares.cpp  endianness.cpp  fizzbuzz.cpp  grid_walk.cpp  lucky_ticket.cpp  lucky_ticket.txt  mixed_content.cpp  multipication_table.cpp  multiply_lists  multiply_lists.cpp  odd_numbers.cpp  reverse_and_add.cpp  reverse_word.cpp  robot_movements.cpp  shortest_repetition.cpp  shortest_repetition.txt  simple_or_trump.cpp  sort_matix_columns.cpp  string_mask.cpp  sum_of_integers.cpp  sum_of_integers.txt  trailing_string.cpp
GoSol/BlackCard/: blackCard.go
GoSol/Road_Trip/: road_trip.go
JS/: jolly_jumpers.js  jolly_jumpers.txt  knight_moves.js
RubySol/: armstrong_number.rb  armstrong_number.txt  beautiful_strings.rb  calculate_distance.rb  capitalize_words.rb  cash_register.rb  column_names.rb  column_names.txt  compare_points.rb  connected_cells_in_a_grid.rb  counting_primes.rb  data_recover.rb  data_recover.txt  decimal_to_binary.rb  detecting_cycles.rb  find_a_writer.rb  first_non-repeated_char.rb  first_non-repeated_char.txt  football.rb  happy_numbers.rb  hex_to_dec.rb  hex_to_dec.txt  hidden_digits.rb  json_menu_ids.rb  longest_word.rb  lowercase.rb  lowest_unique_number.rb  lowest_unique_number.txt  major_element.rb  major_element.txt  mark_and_toys.rb  mersenne_prime.rb  mersenne_prime.txt  mersenne_prime2.rb  minimum_coins.rb  minimum_coins.txt  missing_numbers.rb  mixed_content.rb  morse_code.rb  mth_to_last.rb  (+24 more)
(+19 files in other folders)
